--- a/src/Css/style.css
+++ b/src/Css/style.css
@@ -39,14 +39,30 @@ body {
 input,
 textarea,
 select {
-    padding: 0.8rem 1.4rem;
-    background-color: var(--color-gray-900);
-    border-radius: var(--card-border-radius-2);
-    resize: none;
-    color: var(--color-primary);
+  padding: 0.8rem 1.4rem;
+  background-color: var(--color-gray-900);
+  border-radius: var(--card-border-radius-2);
+  resize: none;
+  color: var(--color-primary);
 }
 
-h1,h2,h3,h4,h5,h6 {
+.Navbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+.white {
+  color: var(--color-white);
+}
+
+.primary {
+  color: var(--color-primary) !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
   color: var(--color-primary);
   font-weight: 600;
 }
@@ -55,16 +71,19 @@ h1,h2,h3,h4,h5,h6 {
   color: var(--color-primary);
   font-weight: 600;
 }
+
 .Navbar .nav-link {
-  color: var(--color-secondary);
+  color: var(--color-white);
   font-weight: 400;
   margin: 0 10px;
   font-size: 15px;
   cursor: pointer;
 }
+
 .Navbar .nav-link:hover {
   border-bottom: 2px solid var(--color-primary);
 }
+
 .Navbar .show {
   background-color: var(--color-primary);
   justify-content: center;
@@ -72,43 +91,69 @@ h1,h2,h3,h4,h5,h6 {
   color: var(--color-white);
   padding: 10PX;
 }
+
 .Navbar .show .nav-link {
   color: var(--color-white) !important;
 }
+
 .Navbar .show .nav-link:hover {
   color: var(--color-secondary) !important;
 }
 
-.Banner {
+.background {
   background-color: var(--color-secondary);
-  border-radius: 30px;
-  margin: 20px 0;
+  position: relative;
+  padding: 0;
+  margin: 0;
 }
+
+.video-background {
+  -o-object-fit: contain;
+     object-fit: contain;
+  z-index: -1;
+}
+.video-background video {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.Banner {
+  width: 100%;
+  margin-top: -320px;
+  margin-left: 50px;
+  color: white;
+}
+
 .Banner .text {
   width: 80%;
+  text-align: left;
 }
+
 .Banner h2,
 .Banner p {
   color: var(--color-white);
 }
+
 .Banner h2 {
   font-weight: 600;
 }
+
 .Banner img {
   width: 50%;
 }
-.view .each{
+
+.view .each {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.view .each .sub{
+.view .each .sub {
   font-size: 13px !important;
   color: var(--color-primary);
 }
 
-.view .each .value{
+.view .each .value {
   font-size: 18px;
   font-weight: 500;
 }
@@ -121,16 +166,20 @@ h1,h2,h3,h4,h5,h6 {
 .Experience {
   background-color: var(--color-primary-light);
 }
+
 .Experience .img img {
   width: 90%;
 }
+
 .Experience .each .set {
   display: flex;
   gap: 10px;
 }
+
 .Experience .each .set p {
   color: gray;
 }
+
 .Experience .each .set img {
   width: 7%;
   height: 7%;
@@ -140,17 +189,21 @@ h1,h2,h3,h4,h5,h6 {
   width: 100%;
   margin-bottom: 10px;
 }
+
 .Discover .each {
   border: 1px solid #efefef;
   padding: 16px;
   border-radius: 30px;
 }
+
 .Discover span {
   color: var(--color-primary);
 }
+
 .Discover p {
   color: gray;
 }
+
 .Discover .down {
   display: flex;
   align-items: center;
@@ -161,6 +214,7 @@ h1,h2,h3,h4,h5,h6 {
   padding: 16px;
   border-radius: 30px;
 }
+
 .Customers h1 span {
   color: var(--color-primary);
 }
@@ -177,12 +231,14 @@ h1,h2,h3,h4,h5,h6 {
   padding: 50px 0;
   color: var(--color-white);
 }
+
 .Footer .links ul {
   display: flex;
   margin: 0;
   justify-content: center;
   gap: 35px;
 }
+
 .Footer .social ul {
   display: flex;
   margin: 0;
@@ -190,12 +246,15 @@ h1,h2,h3,h4,h5,h6 {
   gap: 35px;
   font-size: 15px;
 }
+
 .Footer .social ul svg {
   margin-right: 10px;
 }
+
 .Footer hr {
   color: #363636;
 }
+
 .Footer .middle {
   border: 1px solid rgb(43, 43, 43);
   border-radius: 30px;
@@ -203,9 +262,11 @@ h1,h2,h3,h4,h5,h6 {
   padding: 40px 0;
   background-color: #141414;
 }
+
 .Footer .middle p {
   padding: 0;
 }
+
 .Footer .middle .input {
   background-color: var(--color-secondary);
   height: 65px;
@@ -216,11 +277,13 @@ h1,h2,h3,h4,h5,h6 {
   border-radius: 20px 50px;
   width: 90%;
 }
+
 .Footer .middle .input input {
   background-color: var(--color-secondary);
   color: var(--color-white);
   width: 100%;
 }
+
 .Footer .down ul {
   display: flex;
   margin: 0;
@@ -235,10 +298,12 @@ h1,h2,h3,h4,h5,h6 {
   height: 100vh;
   background-color: #efefef;
 }
+
 .form__section small {
   margin-top: 1rem;
   display: block;
 }
+
 .form__section a {
   color: var(--color-primary);
 }
@@ -275,28 +340,34 @@ h1,h2,h3,h4,h5,h6 {
   font-weight: 300;
   font-size: 13px;
 }
+
 .inputts img {
   width: 12px;
 }
+
 .inputts option {
   font-size: 12px !important;
   color: rgba(99, 119, 138, 0.5) !important;
 }
 
-.table{
+.table {
   background-color: var(--color-secondary) !important;
 }
+
 .Table table thead {
   background-color: var(--color-primary) !important;
   color: white;
 }
+
 .Table table thead th {
   font-size: 16px !important;
   color: var(--color-primary);
 }
-.Table table thead  {
+
+.Table table thead {
   background-color: var(--color-primary) !important;
 }
+
 .Table table tbody tr {
   margin-bottom: 10px !important;
   color: gray !important;
@@ -304,58 +375,69 @@ h1,h2,h3,h4,h5,h6 {
   font-size: 14px;
   background-color: var(--color-primary-light) !important;
 }
-.Table table tbody tr:hover{
+
+.Table table tbody tr:hover {
   background-color: red !important;
 }
+
 .Table table tbody tr td,
 .Table table tbody tr th {
   color: var(--color-secondary) !important;
 }
+
 .Table .down {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .Table .down li,
 .Table .down span {
   color: var(--color-primary) !important;
   background-color: transparent;
 }
-.tables thead{
+
+.tables thead {
   background-color: var(--color-primary) !important;
 }
-.table>:not(caption)>*>* {
+
+.table > :not(caption) > * > * {
   padding: 20px;
   background-color: var(--color-primary-light) !important;
 }
-.table>:not(caption)>*>* thead{
+
+.table > :not(caption) > * > * thead {
   background-color: var(--color-secondary) !important;
 }
 
-ul{
+ul {
   padding: 0;
 }
-.view a{
+
+.view a {
   color: var(--color-primary);
 }
-.view a:hover{
+
+.view a:hover {
   color: var(--color-secondary);
 }
-.view{
+
+.view {
   padding: 30px;
 }
+
 @media screen and (max-width: 700px) {
-  .form__section{
+  .form__section {
     padding: 10px !important;
   }
-  .form__section-container{
+  .form__section-container {
     padding: 20px !important;
     width: var(--container-width-md) !important;
   }
-  .Table{
+  .Table {
     overflow: scroll !important;
   }
-  .view{
+  .view {
     padding: 10px;
   }
-}
+}/*# sourceMappingURL=style.css.map */
