--- a/src/Css/style.scss
+++ b/src/Css/style.scss
@@ -39,48 +39,182 @@ body {
 input,
 textarea,
 select {
-    padding: 0.8rem 1.4rem;
-    background-color: var(--color-gray-900);
-    border-radius: var(--card-border-radius-2);
-    resize: none;
-    color: var(--color-primary);
+  padding: 0.8rem 1.4rem;
+  background-color: var(--color-gray-900);
+  border-radius: var(--card-border-radius-2);
+  resize: none;
+  color: var(--color-primary);
 }
-.Navbar{
+
+.Navbar {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 1;
 }
-.white{
-  color:var(--color-white)
+
+.white {
+  color: var(--color-white)
 }
-.minute{
-font-weight: 400;
-background-color: var(--color-primary);
-padding: 10px 15px;
+
+// NAV
+.nav {
+  background-color: white;
+
+  box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 30px;
+  border-bottom: 1px solid #dddd;
+
+  .search {
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid var(--color-dull-white);
+    max-height: 35px;
+    align-items: center;
+    display: flex;
+
+
+    input {
+      background: transparent;
+      border: none;
+      outline: none;
+      width: 300px;
+      margin: 0px 20px;
+    }
+  }
+
+
 }
-.primary{
-  color:var(--color-primary) !important
+
+.LinkHeader {
+  background-color: var(--color-primary);
+  padding: 10px 20px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+
+  a {
+    li {
+      margin: 0 10px;
+      font-size: 13px;
+      color: var(--color-white);
+      cursor: pointer;
+
+      &:hover {
+        color: var(--color-black) !important;
+      }
+    }
+    &:hover {
+      color: var(--color-black) !important;
+    }
+  }
+
+  .this {
+    color: var(--color-black);
+    margin-left: 10px;
+  }
 }
-h1,h2,h3,h4,h5,h6 {
+
+////////////////////////////////////////////////////////////////
+/// //TABLE
+/// ////////////////////////////////////////////////////////////////
+.Table {
+  background-color: var(--color-body);
+  padding: 20px;
+  padding-bottom: 0;
+  border-radius: 20px;
+
+  table {
+    thead {
+      background-color: var(--color-default) !important;
+      color: white;
+
+      th {
+        font-size: 16px !important;
+      }
+    }
+
+    tbody {
+      tr {
+        margin-bottom: 10px !important;
+        color: gray !important;
+        ;
+        cursor: pointer;
+        font-size: 14px;
+
+        td,
+        th {
+          color: gray !important;
+          ;
+        }
+
+        // &:hover{
+        //     background-color: var(--color-second-light);
+        // }
+
+      }
+    }
+
+  }
+
+  .down {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    li,
+    span {
+      color: var(--color-second) !important;
+      background-color: transparent;
+    }
+  }
+}
+
+.minute {
+  font-weight: 400;
+  background-color: var(--color-primary);
+  padding: 10px 15px;
+}
+
+.primary {
+  color: var(--color-primary) !important
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: var(--color-primary);
   font-weight: 600;
 }
-.navHeight{
+
+.navHeight {
   height: 60px;
   position: relative;
 }
-.m50{
+
+.m50 {
   padding: 50px 0;
 }
+.m20 {
+  padding: 20px 0;
+}
+
 .Navbar .navbar-brand {
   color: var(--color-primary);
   font-weight: 600;
 }
-.black{
+
+.black {
   color: #07070C;
 }
+
 .Navbar .nav-link {
   // color: var(--color-white);
   font-weight: 500;
@@ -88,9 +222,11 @@ h1,h2,h3,h4,h5,h6 {
   font-size: 15px;
   cursor: pointer;
 }
+
 .Navbar .nav-link:hover {
   border-bottom: 2px solid var(--color-primary);
 }
+
 .Navbar .show {
   background-color: var(--color-primary);
   justify-content: center;
@@ -98,25 +234,31 @@ h1,h2,h3,h4,h5,h6 {
   color: var(--color-white);
   padding: 10PX;
 }
+
 .Navbar .show .nav-link {
   color: var(--color-white) !important;
 }
+
 .Navbar .show .nav-link:hover {
   color: var(--color-secondary) !important;
 }
-.background{
+
+.background {
   background-color: var(--color-secondary);
   position: relative;
   padding: 0;
   margin: 0;
 }
+
 .video-background {
   object-fit: contain;
   z-index: -1;
-  video{
-   object-fit: contain;
+
+  video {
+    object-fit: contain;
   }
 }
+
 .Banner {
   // position: absolute;
   width: 100%;
@@ -128,6 +270,7 @@ h1,h2,h3,h4,h5,h6 {
   margin-left: 50px;
   color: white;
 }
+
 // .ban{
 //   position: relative;
 // }
@@ -135,28 +278,32 @@ h1,h2,h3,h4,h5,h6 {
   width: 80%;
   text-align: left;
 }
+
 .Banner h2,
 .Banner p {
   color: var(--color-white);
 }
+
 .Banner h2 {
   font-weight: 600;
 }
+
 .Banner img {
   width: 50%;
 }
-.view .each{
+
+.view .each {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.view .each .sub{
+.view .each .sub {
   font-size: 13px !important;
   color: var(--color-primary);
 }
 
-.view .each .value{
+.view .each .value {
   font-size: 18px;
   font-weight: 500;
 }
@@ -169,16 +316,20 @@ h1,h2,h3,h4,h5,h6 {
 .Experience {
   background-color: var(--color-primary-light);
 }
+
 .Experience .img img {
   width: 90%;
 }
+
 .Experience .each .set {
   display: flex;
   gap: 10px;
 }
+
 .Experience .each .set p {
   color: gray;
 }
+
 .Experience .each .set img {
   width: 7%;
   height: 7%;
@@ -188,17 +339,21 @@ h1,h2,h3,h4,h5,h6 {
   width: 100%;
   margin-bottom: 10px;
 }
+
 .Discover .each {
   border: 1px solid #efefef;
   padding: 16px;
   border-radius: 30px;
 }
+
 .Discover span {
   color: var(--color-primary);
 }
+
 .Discover p {
   color: gray;
 }
+
 .Discover .down {
   display: flex;
   align-items: center;
@@ -209,6 +364,7 @@ h1,h2,h3,h4,h5,h6 {
   padding: 16px;
   border-radius: 30px;
 }
+
 .Customers h1 span {
   color: var(--color-primary);
 }
@@ -225,12 +381,14 @@ h1,h2,h3,h4,h5,h6 {
   padding: 50px 0;
   color: var(--color-white);
 }
+
 .Footer .links ul {
   display: flex;
   margin: 0;
   justify-content: center;
   gap: 35px;
 }
+
 .Footer .social ul {
   display: flex;
   margin: 0;
@@ -238,12 +396,15 @@ h1,h2,h3,h4,h5,h6 {
   gap: 35px;
   font-size: 15px;
 }
+
 .Footer .social ul svg {
   margin-right: 10px;
 }
+
 .Footer hr {
   color: #363636;
 }
+
 .Footer .middle {
   border: 1px solid rgb(43, 43, 43);
   border-radius: 30px;
@@ -251,9 +412,11 @@ h1,h2,h3,h4,h5,h6 {
   padding: 40px 0;
   background-color: #141414;
 }
+
 .Footer .middle p {
   padding: 0;
 }
+
 .Footer .middle .input {
   background-color: var(--color-secondary);
   height: 65px;
@@ -264,11 +427,13 @@ h1,h2,h3,h4,h5,h6 {
   border-radius: 20px 50px;
   width: 90%;
 }
+
 .Footer .middle .input input {
   background-color: var(--color-secondary);
   color: var(--color-white);
   width: 100%;
 }
+
 .Footer .down ul {
   display: flex;
   margin: 0;
@@ -283,10 +448,12 @@ h1,h2,h3,h4,h5,h6 {
   height: 100vh;
   background-color: #efefef;
 }
+
 .form__section small {
   margin-top: 1rem;
   display: block;
 }
+
 .form__section a {
   color: var(--color-primary);
 }
@@ -323,28 +490,34 @@ h1,h2,h3,h4,h5,h6 {
   font-weight: 300;
   font-size: 13px;
 }
+
 .inputts img {
   width: 12px;
 }
+
 .inputts option {
   font-size: 12px !important;
   color: rgba(99, 119, 138, 0.5) !important;
 }
 
-.table{
+.table {
   background-color: var(--color-secondary) !important;
 }
+
 .Table table thead {
   background-color: var(--color-primary) !important;
   color: white;
 }
+
 .Table table thead th {
   font-size: 16px !important;
   color: var(--color-primary);
 }
-.Table table thead  {
+
+.Table table thead {
   background-color: var(--color-primary) !important;
 }
+
 .Table table tbody tr {
   margin-bottom: 10px !important;
   color: gray !important;
@@ -352,58 +525,283 @@ h1,h2,h3,h4,h5,h6 {
   font-size: 14px;
   background-color: var(--color-primary-light) !important;
 }
-.Table table tbody tr:hover{
+
+.Table table tbody tr:hover {
   background-color: red !important;
 }
+
 .Table table tbody tr td,
 .Table table tbody tr th {
   color: var(--color-secondary) !important;
 }
+
 .Table .down {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
+
 .Table .down li,
 .Table .down span {
   color: var(--color-primary) !important;
   background-color: transparent;
 }
-.tables thead{
+
+.tables thead {
   background-color: var(--color-primary) !important;
 }
+
 .table>:not(caption)>*>* {
   padding: 20px;
   background-color: var(--color-primary-light) !important;
 }
-.table>:not(caption)>*>* thead{
+
+.table>:not(caption)>*>* thead {
   background-color: var(--color-secondary) !important;
 }
 
-ul{
+ul {
   padding: 0;
 }
-.view a{
+
+.view a {
   color: var(--color-primary);
 }
-.view a:hover{
+
+.view a:hover {
   color: var(--color-secondary);
 }
-.view{
+
+.view {
   padding: 30px;
 }
+
+.navbarDisplay {
+  display: none !important;
+}
+
+.Inner {
+  overflow: scroll;
+  height: 91.2vh;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+
+}
+
+.BannerDetails {
+  .sets {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: var(--color-white);
+    padding: 30px 50px;
+
+    .set1 {
+      display: flex;
+      align-items: center;
+
+      h2 {
+        font-weight: 600;
+        color: var(--color-default);
+      }
+
+      p {
+        color: var(--color-grey);
+        font-size: 15px;
+      }
+
+      img {
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+    }
+
+  }
+}
+
+.cards {
+  .set {
+    background-color: var(--color-white);
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
+    border-radius: 20px;
+    padding: 20px;
+
+    .opt1 {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      p {
+        color: var(--color-black);
+        font-size: 18px;
+      }
+
+      svg {
+        color: var(--color-grey);
+      }
+    }
+
+    .task,
+    .due,
+    .proposal,
+    .open {
+      text-align: center;
+
+      h1 {
+        font-size: 100px;
+        line-height: 80px;
+      }
+
+      p {
+        font-size: 18px;
+      }
+    }
+
+    .due {
+      color: var(--color-blue);
+    }
+
+    .task {
+      color: var(--color-red);
+    }
+
+    .open {
+      color: var(--color-orange);
+    }
+
+    .proposal {
+      color: var(--color-green);
+    }
+
+    .down {
+      color: var(--color-grey);
+    }
+  }
+}
+
+.card-header {
+  background-color: var(--color-primary);
+  color: white;
+  border: none;
+}
+
+.news {
+  .bg-soft-pink {
+    background-color: rgba(253, 60, 151, 0.08) !important;
+    color: var(--color-primary) !important;
+  }
+
+  .btn {
+    background-color: var(--color-primary);
+    border: none;
+    color: white;
+    padding: 5px 15px;
+    font-size: 13px;
+    border-radius: 3px;
+  }
+
+  .newsHeading {
+    display: block;
+    display: -webkit-box;
+    margin: 0.5rem 0px;
+    height: 3.6em;
+    // line-height: 1.3em;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  .newsSummary {
+    display: block;
+    display: -webkit-box;
+    height: 5em;
+    // line-height: 1.3em;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+}
+
 @media screen and (max-width: 700px) {
-  .form__section{
+  .form__section {
     padding: 10px !important;
   }
-  .form__section-container{
+
+  .form__section-container {
     padding: 20px !important;
     width: var(--container-width-md) !important;
   }
-  .Table{
+
+  .Table {
     overflow: scroll !important;
   }
-  .view{
+
+  .view {
     padding: 10px;
+  }
+
+  .navbarDisplay {
+    display: block !important;
+    padding: 6px 14px;
+    background-color: var(--color-default);
+    transition: all .5s ease;
+
+    .nan {
+      display: flex;
+
+      h2 {
+        color: var(--color-white);
+
+      }
+    }
+
+    li {
+      &:hover {
+        background-color: var(--color-default-light);
+        border-radius: 5px;
+      }
+
+      div {
+        display: flex;
+        align-items: center;
+      }
+
+      span {
+        font-size: 15px;
+        color: var(--color-white);
+      }
+
+      i {
+        color: var(--color-white);
+        line-height: 60px;
+        min-width: 50px;
+        font-size: 25px;
+        text-align: center;
+      }
+    }
+
+    img {
+      width: 150px;
+      margin-right: 10px !important;
+    }
+
+    .navbar-toggler {
+      border: 1px solid var(--color-second) !important;
+
+      // background-color: var(--color-second) !important;
+      svg {
+        color: var(--color-white) !important;
+      }
+    }
   }
 }
