--- a/src/Css/style.css
+++ b/src/Css/style.css
@@ -192,6 +192,7 @@ h6 {
 
 .Navbar .nav-link:hover {
   border-bottom: 2px solid var(--color-primary);
+  color: var(--color-white) !important;
 }
 
 .Navbar .show {
@@ -215,6 +216,73 @@ h6 {
   position: relative;
   padding: 0;
   margin: 0;
+}
+
+.search__bar {
+  margin-top: 2rem;
+}
+.search__bar .search__bar-container {
+  position: relative;
+  width: 30rem;
+  background: #ddd;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+  padding: 0.6rem 1rem;
+  border-radius: var(--card-border-radius-2);
+  color: gray;
+}
+.search__bar .search__bar-container div {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.search__bar .search__bar-containers {
+  position: relative;
+  width: 100%;
+  background: #ddd;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+  padding: 0.6rem 1rem;
+  border-radius: var(--card-border-radius-2);
+  color: gray;
+}
+.search__bar .search__bar-containers div {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.search__bar .btn {
+  display: inline-block;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0.6rem 1.2rem;
+  background-color: var(--color-primary);
+  border-radius: var(--card-border-radius-2);
+  cursor: pointer;
+  transition: var(--transition);
+  color: var(--color-white);
+}
+.search__bar .btn:hover {
+  background: var(--color-white) !important;
+  color: var(--color-bg) !important;
+}
+.search__bar input {
+  background: transparent;
+  margin-left: 0.7rem;
+  padding: 0.5rem 0;
+  width: 100%;
+}
+.search__bar input::-moz-placeholder {
+  color: var(--color-gray-300);
+}
+.search__bar input::placeholder {
+  color: var(--color-gray-300);
 }
 
 .video-background {
@@ -298,6 +366,12 @@ h6 {
 .Discover img {
   width: 100%;
   margin-bottom: 10px;
+}
+
+.Discover video {
+  width: 100%;
+  margin-bottom: 10px;
+  border-radius: 20px 20px 0 0;
 }
 
 .Discover .each {
@@ -422,6 +496,11 @@ h6 {
   width: var(--form-width);
   background-color: var(--color-primary-light);
   border-radius: 20px;
+}
+
+.bordBlack {
+  border: 1px solid var(--color-secondary);
+  border-radius: 8px;
 }
 
 .inputts {
