--- a/src/Css/style.scss
+++ b/src/Css/style.scss
@@ -225,6 +225,7 @@ h6 {
 
 .Navbar .nav-link:hover {
   border-bottom: 2px solid var(--color-primary);
+  color: var(--color-white) !important;
 }
 
 .Navbar .show {
@@ -249,7 +250,75 @@ h6 {
   padding: 0;
   margin: 0;
 }
+// SEARCH
+.search__bar {
+  margin-top: 2rem;
 
+  .search__bar-container {
+      position: relative;
+      width: 30rem;
+      background: #ddd;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      overflow: hidden;
+      padding: 0.6rem 1rem;
+      border-radius: var(--card-border-radius-2);
+      color: gray;
+
+      div {
+          width: 100%;
+          display: flex;
+          align-items: center;
+      }
+  }
+
+  .search__bar-containers {
+      position: relative;
+      width: 100%;
+      background: #ddd;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      overflow: hidden;
+      padding: 0.6rem 1rem;
+      border-radius: var(--card-border-radius-2);
+      color: gray;
+
+      div {
+          width: 100%;
+          display: flex;
+          align-items: center;
+      }
+  }
+  .btn {
+    display: inline-block;
+    width: fit-content;
+    padding: 0.6rem 1.2rem;
+    background-color: var(--color-primary);
+    border-radius: var(--card-border-radius-2);
+    cursor: pointer;
+    transition: var(--transition);
+    color: var(--color-white);
+
+    &:hover {
+        background: var(--color-white) !important;
+        color: var(--color-bg) !important;
+    }
+}
+  input {
+      background: transparent;
+      margin-left: 0.7rem;
+      padding: 0.5rem 0;
+      width: 100%;
+
+      &::placeholder {
+          color: var(--color-gray-300);
+      }
+  }
+}
 .video-background {
   object-fit: contain;
   z-index: -1;
@@ -338,6 +407,12 @@ h6 {
 .Discover img {
   width: 100%;
   margin-bottom: 10px;
+}
+
+.Discover video {
+  width: 100%;
+  margin-bottom: 10px;
+  border-radius: 20px 20px 0 0;
 }
 
 .Discover .each {
@@ -462,6 +537,11 @@ h6 {
   width: var(--form-width);
   background-color: var(--color-primary-light);
   border-radius: 20px;
+}
+
+.bordBlack{
+  border: 1px solid var(--color-secondary);
+  border-radius: 8px;
 }
 
 .inputts {
