--- a/src/Css/style.css
+++ b/src/Css/style.css
@@ -190,9 +190,14 @@ h6 {
   cursor: pointer;
 }
 
-.Navbar .nav-link:hover {
+.Navbar .white:hover {
   border-bottom: 2px solid var(--color-primary);
   color: var(--color-white) !important;
+}
+
+.Navbar .black:hover {
+  border-bottom: 2px solid var(--color-primary);
+  color: var(--color-secondary) !important;
 }
 
 .Navbar .show {
@@ -256,21 +261,6 @@ h6 {
   width: 100%;
   display: flex;
   align-items: center;
-}
-.search__bar .btn {
-  display: inline-block;
-  width: -moz-fit-content;
-  width: fit-content;
-  padding: 0.6rem 1.2rem;
-  background-color: var(--color-primary);
-  border-radius: var(--card-border-radius-2);
-  cursor: pointer;
-  transition: var(--transition);
-  color: var(--color-white);
-}
-.search__bar .btn:hover {
-  background: var(--color-white) !important;
-  color: var(--color-bg) !important;
 }
 .search__bar input {
   background: transparent;
