--- a/src/Css/style.css
+++ b/src/Css/style.css
@@ -208,6 +208,12 @@ h6 {
   padding: 10PX;
 }
 
+.justify-content-space {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .Navbar .show .nav-link {
   color: var(--color-white) !important;
 }
