--- a/src/Css/style.scss
+++ b/src/Css/style.scss
@@ -358,18 +358,18 @@ h6 {
   width: 50%;
 }
 
-.view .each {
+.SBTV .each {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.view .each .sub {
+.SBTV .each .sub {
   font-size: 13px !important;
   color: var(--color-primary);
 }
 
-.view .each .value {
+.SBTV .each .value {
   font-size: 18px;
   font-weight: 500;
 }
@@ -641,15 +641,15 @@ ul {
   padding: 0;
 }
 
-.view a {
+.SBTV a {
   color: var(--color-primary);
 }
 
-.view a:hover {
+.SBTV a:hover {
   color: var(--color-secondary);
 }
 
-.view {
+.SBTV {
   padding: 30px;
 }
 
@@ -823,7 +823,7 @@ ul {
     overflow: scroll !important;
   }
 
-  .view {
+  .SBTV {
     padding: 10px;
   }
 
