--- a/src/Css/style.scss
+++ b/src/Css/style.scss
@@ -521,6 +521,26 @@ h6 {
   background-color: #efefef;
 }
 
+.form__sectionBg {
+  display: grid;
+  place-items: center;
+  height: 100vh;
+}
+.loadWrapper {
+  height: 100vh;
+  position: relative;
+  background-color: var(--color-primary-light);
+  .loader {
+      position: absolute;
+      top: 45%;
+      left: 40%;
+  }
+  .loaderHeightWeight {
+    width: 50px;
+    height: 50px;
+}
+}
+
 .form__section small {
   margin-top: 1rem;
   display: block;
